hphp/hack/test/typecheck/wildcard/wildcard_in_typed_local_bad.php.exp
ERROR: File "wildcard_in_typed_local_bad.php", line 9, characters 15-15:
Wildcard typehints are not allowed in this position (Naming[2084])
ERROR: File "wildcard_in_typed_local_bad.php", line 12, characters 17-17:
Wildcard typehints are not allowed in this position (Naming[2084])
